--- a/src/policies.html
+++ b/src/policies.html
@@ -121,7 +121,18 @@
                 <!-- footer -->
                 <div class="row">
                     <div class="ep-footer-app col-md-12 col-lg-12">
-                        <div class="epm-authority ">
+                        <div class="ep-authority">
+                            <div class="ep-toolsbox">
+                                <a href="http://v2.sherpa.ac.uk/id/repository/3865">OpenDOAR</a>
+                                <a href="http://roar.eprints.org/12433/">ROAR</a><br>
+                                <a title="ios" href="http://onesearch.id/Search/Results?filter[]=repoId:IOS3803" target="_blank">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/onesearch.png" alt="Indonesia One Search" width="113" height="auto">
+                                </a>
+                                <a title="GS" href="https://scholar.google.co.id/citations?user=BKQ9E80AAAAJ&amp;hl=id" target="_blank">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/googlescholarwarning.png" alt="Google Scholar" width="113" height="auto">
+                                </a>
+                            </div>
+                            <div class="ep-information-indexer">Repository has been indexed in some indexers.</div>
                             <span> @Copyright by Perpustakaan Kemendikbud All rights reserved.</span>
                             <p>This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.</p>
                         </div>
