add new format structures

--- a/src/index.html
+++ b/src/index.html
@@ -28,28 +28,6 @@
                 <div class="ep-header-app">
                     <div class="row">
                         <div class="col-lg-12">
-                            <header id="header">
-                                <a href="http://repositori.kemdikbud.go.id" class="logo">
-                                    <img src="/assets/images/kemdikbud-repo.jpg" alt="logo-kemdikbud"/>
-                                </a>
-                                <ul class="ep-icons icons">
-                                    <li>
-                                        <a href="https://www.facebook.com/Kemdikbud.RI" target="_blank">
-                                            <img src="/assets/icon/fb.svg" alt="kemdikbud-fb"/>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://twitter.com/Kemdikbud_RI" target="_blank">
-                                            <img src="/assets/icon/twitter.svg" alt="kemdikbud-twitter"/>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.youtube.com/channel/UCH9AFSwY4WqgHoCLG2XIveg" target="_blank">
-                                            <img src="/assets/icon/youtube.svg" alt="kemdikbud-yotube"/>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </header>
                             <div class="header-slider-banner">
                                 <div class="banners-app">
 
@@ -58,13 +36,36 @@
                         </div>
                     </div>
                 </div>
-                <!-- login action -->
-                <div class="ep-login-action">
-                    <a href="/login.html" class="ep-button-login">Login</a>
-                </div>
-                <div id="share-social-all"></div>
 
                 <div class="ep-content-main">
+                    <div class="row d-flex">
+                        <div class="col-sm-12 col-md-4 col-lg-4">
+                            <!-- login action -->
+                            <div class="ep-login-action">
+                                <a href="/login.html" class="ep-button-login">Login</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-8 col-lg-8">
+                            <ul class="ep-icons icons">
+                                <li>
+                                    <a href="https://www.facebook.com/Kemdikbud.RI" target="_blank">
+                                        <img src="/assets/icon/fb.svg" alt="kemdikbud-fb"/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/Kemdikbud_RI" target="_blank">
+                                        <img src="/assets/icon/twitter.svg" alt="kemdikbud-twitter"/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.youtube.com/channel/UCH9AFSwY4WqgHoCLG2XIveg" target="_blank">
+                                        <img src="/assets/icon/youtube.svg" alt="kemdikbud-yotube"/>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-md-4 col-lg-4" id="sidebar-action">
                             <!-- Sidebar -->
@@ -266,10 +267,10 @@
                                 <a href="http://v2.sherpa.ac.uk/id/repository/3865">OpenDOAR</a>
                                 <a href="http://roar.eprints.org/12433/">ROAR</a><br>
                                 <a title="ios" href="http://onesearch.id/Search/Results?filter[]=repoId:IOS3803" target="_blank">
-                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/onesearch.png" alt="Indonesia One Search" width="113" height="auto">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/onesearch.png" alt="Indonesia One Search" width="113" height="auto"/>
                                 </a>
                                 <a title="GS" href="https://scholar.google.co.id/citations?user=BKQ9E80AAAAJ&amp;hl=id" target="_blank">
-                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/googlescholarwarning.png" alt="Google Scholar" width="113" height="auto">
+                                    <img src="https://journal.ugm.ac.id/public/site/images/admin/index/googlescholarwarning.png" alt="Google Scholar" width="113" height="auto"/>
                                 </a>
                             </div>
                             <div class="ep-information-indexer">Repository has been indexed in some indexers.</div>
