feat(develop all utility kemdikbud)

--- a/src/statistic.html
+++ b/src/statistic.html
@@ -17,7 +17,17 @@
         <meta http-equiv="Content-Language" content="en" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no" />
+        <meta property="og:title" content="repositori.kemdikbud.go.id" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://repositori.kemdikbud.go.id" />
+        <meta property="og:image" content="https://www.kemdikbud.go.id/main/addons/shared_addons/themes/november_theme/img/kemdikbud_64x64.png" />
+        <meta property="og:image:type" content="image/png"/>
+        <meta property="og:image:width" content="64"/>
+        <meta property="og:image:height" content="64"/>
+        <meta property="og:image:alt" content="kemendikbud logo"/>
+        <meta property="og:description" content="Repositori Institusi Kementerian Pendidikan dan Kebudayaan Republik Indonesia (Repositori Institusi Kemendikbud RI) adalah sebuah layanan informasi digital yang menyediakan akses terbuka (open access) dan daring (online) kepada publik terkait dengan berbagai informasi di bidang pendidikan dan kebudayaan yang dihasilkan oleh seluruh unit kerja di lingkungan Kemendikbud dalam berbagai format. Repositori Institusi Kemendikbud RI juga merupakan sarana yang digunakan Perpustakaan Kemendikbud dalam mengumpulkan seluruh karya yang dihasilkan oleh seluruh unit kerja di lingkungan Kemendikbud agar dapat diakses secara luas dan mudah oleh publik."/>
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+        <script async defer src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </head>
 
     <body>
