--- a/src/login.html
+++ b/src/login.html
@@ -27,31 +27,9 @@
                 <div class="ep-header-app">
                     <div class="row">
                         <div class="col-lg-12">
-                            <header id="header">
-                                <a href="http://repositori.kemdikbud.go.id" class="logo">
-                                    <img src="/assets/images/kemdikbud-repo.jpg" alt="logo-kemdikbud"/>
-                                </a>
-                                <ul class="ep-icons icons">
-                                    <li>
-                                        <a href="https://www.facebook.com/Kemdikbud.RI" target="_blank">
-                                            <img src="/assets/icon/fb.svg" alt="kemdikbud-fb"/>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://twitter.com/Kemdikbud_RI" target="_blank">
-                                            <img src="/assets/icon/twitter.svg" alt="kemdikbud-twitter"/>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.youtube.com/channel/UCH9AFSwY4WqgHoCLG2XIveg" target="_blank">
-                                            <img src="/assets/icon/youtube.svg" alt="kemdikbud-yotube"/>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </header>
                             <div class="header-slider-banner">
                                 <div class="banners-app">
-
+                                    <img class="slotbanner" src="/assets/images/header-repositori-kemdikbud.jpeg" alt="banner-kemdikbud"/>
                                 </div>
                             </div>
                         </div>
